# BrainstormAI

./: .gitignore  README.md  main.py  pyproject.toml
config/: app.example.yaml
src/: app.py
src/api/: http.py  ws.py
src/config/: logging.py  settings.py
src/domain/: schemas.py
src/infra/db/: engine.py  models.py  repository.py
src/infra/llm/: factory.py  token_usage.py
src/infra/prompts/: loader.py
src/prompts/: agent_decision.md  agent_reply.md  persona_generation.md
src/services/: agent_decision.py  agent_reply.py  orchestrator.py  persona.py  session.py
src/utils/: common.py
static/: app.js  index.html  style.css
